sass/custom/layout.scss
$border-radius: 5px;

$half-margin   : 0.5rem;
$default-margin: 1rem;
$medium-margin : 2rem;
$huge-margin   : 4rem;

@mixin horizontal-block {
  padding: {
    top   : 1.5rem;
    bottom: 1.5rem;
  }
}

.page {
  display: flex;
  flex-direction: column;
  // justify-content: center;
  padding: $medium-margin 0;
  min-height: 100vh;

  div.principal {
    width: 45%;
    align-self: center;
  }

  svg.banner--dark {
    display: none;
  }
}

.grid-container {
  max-width: 50rem;
}

h1, h2, h3 {
  margin-bottom: $default-margin;
}

.menu-container {
  display: flex;
  flex-direction: row-reverse;
  margin-top: 0;
  margin-bottom: 0;
  padding: 0;
}

.menu.simple a.header-button {
  padding: 0.85em 1em;
}

section, footer {
  margin-top: $huge-margin;
}

.button {
  border-radius: $border-radius;
}

#about {
  #reach-me {
    align-items: center;

    > *:not(:last-child) {
      margin: 0 $half-margin 0 0;
    }
  }
}

#subscription {
  height: 40px;

  form > div {
    display: flex;
    input {
      border-radius: $border-radius;
    }

    .email {
      max-width: 400px;
      width: 250px;
    }

    .button {
      margin-left: 0.3rem;
    }
  }

  #mce-responses {
    display: none;
  }

  .addon {
    margin: $medium-margin 0;
  }
}

#post {
  header {
    margin: 0 0 $medium-margin 0;
  }

  h2 {
    margin: $medium-margin 0 $default-margin 0;
  }

  h3 {
    margin: $medium-margin 0 $default-margin 0;
  }
}

.highligthed-bloc {
  @include horizontal-block;
}

.highlighter-rouge {
  width  : 100%;
  padding: 0 5px;
}

figure {
  margin-bottom: $medium-margin;

  img {
    display: block;
    width: 100%;
    margin-bottom: inherit;
  }
}

pre.highlight {
  padding: $default-margin;
  margin: $default-margin 0;
}

code {
  padding: 0;
}

footer {
  margin-top: $huge-margin;
  padding-top: $default-margin;
}

@media print, screen and (max-width: 80em) {
  .page div.principal {
    width: 85%;
  }

  aside.float-right {
    display: none;
  }

  .grid-container {
    margin   : $medium-margin auto;
  }
}

@media print, screen and (max-width: 40em) {
  #subscription form > div, #reach-me {
      display: block;
  }

  #about #reach-me > *:not(:last-child) {
    margin: $half-margin 0;
  }

  #about {
    margin-bottom: $huge-margin * 2;
  }

  .menu-container {
    flex-direction: column;

    ul {
      flex-direction: column !important;
      align-items: baseline !important;

      li {
        margin: $default-margin 0 0 0 !important;
      }
    }
  }
}

#covid19-banner {
  display: flex;
  flex-direction: column;
  padding: $medium-margin 0;

  .principal{
    width: 50%;
    align-self: center;
  }

  @media print, screen and (max-width: 80em) {
    .principal {
      width: 90%;
    }
  }
}

#book-banner {
  display: flex;
  flex-direction: column;

  .principal{
    padding: $default-margin;
    align-self: center;
  }

  @media print, screen and (max-width: 80em) {
  }
}

.dark-mode-switch {
  visibility: hidden;
  position: fixed;
  top: 0;
  left: 0;

  & ~ .toggle-text {
    cursor: pointer;
    position: fixed;
    top: 3em;
    right: 100px;
    margin: 0;
  }
  
  & ~ .toggle-text--dark {
    display: block;
  }
  
  & ~ .toggle-text--light {
    display: none;
  }
  
  &:checked ~ .toggle-text--dark{
    display: none;
  }
  
  &:checked ~ .toggle-text--light{
    display: block;
  }

  &:checked ~ .page svg.banner--light {
    display: none;
  }

  &:checked ~ .page svg.banner--dark {
    display: block;
  }

  &:checked ~ .page a.header-button img {
    visibility: hidden;
  }
}

@media print, screen and (max-width: 80em) {
  .dark-mode-switch {
    & ~ .toggle-text {
      position: initial;
      padding: 2em 0 0 8%;
    }
  }
}

